--- a/assets/customcss/home.css
+++ b/assets/customcss/home.css
@@ -5,6 +5,12 @@ html, body {
   font-family: 'Poppins', sans-serif;
 }
 
+.section-header {
+  box-shadow: 1px 3px 5px 0px rgba(201,196,196,0.57);
+  -webkit-box-shadow: 1px 3px 5px 0px rgba(201,196,196,0.57);
+  -moz-box-shadow: 1px 3px 5px 0px rgba(201,196,196,0.57);
+}
+
 .navbar-right {
   margin: 0 0 0 auto;
 }
@@ -48,7 +54,7 @@ html, body {
 
 /* section 2 */
 .image-jumbotron {
-  width: 100%;
+  width: 400px;
 }
 
 .wrapper-headline {
@@ -56,10 +62,19 @@ html, body {
 }
 
 .headline-h1 {
+  color: #FFD000;
   font-weight: bold;
   font-style: 2.5rem;
   line-height: 1.3;
 }
+
+.headline-h1 span{
+  color: #000000;
+  font-weight: bold;
+  font-style: 2.5rem;
+  line-height: 1.3;
+}
+
 .headline-paragraf {
   font-size: 1rem;
   font-weight: 500;
@@ -68,59 +83,93 @@ html, body {
   line-height: 1.6;
 }
 
-/* Section 3 */
-.section-clients {
-  background-color: rgb(238, 236, 236);
+.getStarted-button {
+  color: #ffffff;
+  background-color: #F57B20;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: none;
+  border-radius: 3px;
+  font-weight: normal;
 }
 
-.mitra-section {
-  text-align: center;
-  color: grey;
+.learnMore-button {
+  color: #F57B20;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: 1px solid #F57B20;
+  border-radius: 3px;
+  background-color: #ffffff;
+  font-weight: normal;
 }
 
-.row hr {
-  border: 1px solid grey;
-  width: 250px;
-  margin: 10px auto;
+.button-class {
+  margin-top: 15px;
 }
 
-/* Packet Section 4 */
-.section-tabs {
-  box-sizing: border-box;
-  margin-bottom: 20px;
-  padding: 5rem;
-}
-
-.wrapper-card {
-  border: 1px solid grey;
+/* Section 2 */
+.section .hero-section {
   border-radius: 5px;
-  padding: 10px;
-  width: 300px;
+  background-color: #044786;
+}
+
+.section .hero-section .row {
   height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px;
+  padding: 0 10px 0 10px;
 }
 
-.wrapper-card button {
-  width: 100%;
-  color: black;
-  background-color: yellowgreen;
-  border: none;
-  padding-left: 30px;
-  padding-right: 30px;
-  margin-top: 10px;
-  border-radius: 10px;
-  font-weight: bold;
+.section .hero-section .hero-image {
+  margin: 15px;
 }
 
-.wrapper-card button:hover {
-  color: black;
-  background-color: rgb(129, 182, 23);
-  border: none;
-  transition: 1s;
-  border-radius: 10px;
-  font-weight: bold;
+.section .hero-section .hero-description h4, p {
+  color: #ffffff;
+  text-align: left;
 }
 
-/* Responsive Mobile, Tablet & Desktop*/
+/* Section 4 */
+.section-card .card-body h5 {
+  margin-top: 20px;
+}
+
+.section-card .card-body p {
+  margin-top: 20px;
+  color: #000000;
+}
+
+.section-card .card-body .next-button {
+  color: #FF9533;
+  text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Responsive website */
 @media only screen and (max-width: 1023px) {
   .row-jumbotron {
     flex-direction: column-reverse;
